samples/_failures_safe/1761311006_a4d7f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e96737f4.c: In function ‘main’:
./samples/SAFE/__tmp_e96737f4.c:143:5: error: expected expression at end of input
  143 |     if (
      |     ^~
./samples/SAFE/__tmp_e96737f4.c:143:5: error: expected declaration or statement at end of input
